--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
   command = "npm run build"
   publish = "dist"
 
+[build.processing]
+  skip_processing = false
+
+[build.processing.secrets]
+  enabled = false
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
