--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.10",
+    "cli": "^1.0.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -22,7 +23,8 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "supabase": "^2.61.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
